--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name=".NewPostActivity"
             android:windowSoftInputMode="adjustResize"
+            android:label="New Post"
             />
         <activity
             android:name=".PostActivity"
