--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,12 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.huawei.agconnect:agconnect-applinking:1.5.2.300'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.huawei.hms:image-vision:1.0.3.304'
+    implementation 'com.huawei.hms:image-render:1.0.3.303'
 }
 
 apply plugin: 'com.huawei.agconnect'
