--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.thuvarahan.eduforum">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,6 +14,8 @@
         </intent>
     </queries>
 
+    <uses-sdk tools:overrideLibrary="com.huawei.hms.image.vision"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,35 +24,46 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EduForum.Custom">
         <activity
+            android:name=".ui.ImageActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.register.RegisterActivity"
             android:label="@string/title_activity_register"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-
-        <meta-data
-            android:name="com.huawei.hms.client.channel.androidMarket"
-            android:value="false" />
-
         <activity
             android:name=".NewPostActivity"
             android:label="New Question"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".PostActivity"
             android:label=""
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.huawei.hms.client.channel.androidMarket"
+            android:value="false" />
+
+        <meta-data
+            android:name="com.huawei.agconnect.applinking.READ_CLIPBOARD_PERMISSION"
+            android:value="xxxx" />
     </application>
 
 </manifest>
