--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     package="com.thuvarahan.eduforum">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- check network permissions -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- check wifi state -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <queries>
@@ -25,6 +25,7 @@
         android:theme="@style/Theme.EduForum.Custom">
         <activity
             android:name=".ImageActivity"
+            android:label=""
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.register.RegisterActivity"
