--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,70 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.thuvarahan.eduforum">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.thuvarahan.eduforum">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
     <queries>
         <intent>
             <action android:name="com.huawei.hms.core.aidlservice" />
         </intent>
     </queries>
-
-    <uses-sdk tools:overrideLibrary="com.huawei.hms.image.vision"/>
-
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.EduForum.Custom">
-        <activity
-            android:name=".ImageActivity"
-            android:label=""
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.register.RegisterActivity"
-            android:label="@string/title_activity_register"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-        <activity
-            android:name=".NewPostActivity"
-            android:label="New Question"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".PostActivity"
-            android:label=""
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+    <uses-sdk tools:overrideLibrary="com.huawei.hms.image.vision" />
+    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/Theme.EduForum.Custom">
+        <activity android:name=".ImageActivity" android:label="" android:screenOrientation="portrait" />
+        <activity android:name=".ui.register.RegisterActivity" android:label="@string/title_activity_register" android:screenOrientation="portrait" android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity android:name=".ui.login.LoginActivity" android:label="@string/title_activity_login" android:screenOrientation="portrait" android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity android:name=".NewPostActivity" android:label="New Question" android:screenOrientation="portrait" android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".PostActivity" android:label="" android:screenOrientation="portrait" android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.huawei.hms.client.channel.androidMarket"
-            android:value="false" />
-
-        <meta-data
-            android:name="com.huawei.agconnect.applinking.READ_CLIPBOARD_PERMISSION"
-            android:value="xxxx" />
+        <meta-data android:name="com.huawei.hms.client.channel.androidMarket" android:value="false" />
+        <meta-data android:name="com.huawei.agconnect.applinking.READ_CLIPBOARD_PERMISSION" android:value="xxxx" />
+        <activity android:name=".services.push_notification.UsingIntentOpenActivityForMethodOne">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="com.huawei.codelabpush" android:path="/deeplink" android:scheme="pushscheme" />
+            </intent-filter>
+        </activity>
+        <meta-data android:name="push_kit_auto_init_enabled" android:value="true" />
+        <service android:name=".services.push_notification.PushMsgService" android:exported="false">
+            <intent-filter>
+                <action android:name="com.huawei.push.action.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
-
 </manifest>
+
