--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,13 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.squareup.retrofit2:retrofit:2.7.1"
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "com.squareup.retrofit2:converter-gson:2.7.1"
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
+    implementation "com.squareup.okhttp3:okhttp:4.3.1"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:3.0.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.3.1"
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.huawei.agconnect:agconnect-applinking:1.5.2.300'
