splash screen added and networkchangereceiver fixed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,12 @@ android {
             minifyEnabled false
 //            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        applicationVariants.all { variant ->
+            variant.outputs.all {
+                outputFileName = "eduforum_${variant.versionName}.apk"
+            }
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
