--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EduForum.Custom">
         <activity
+            android:name=".SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ImageActivity"
             android:label=""
             android:screenOrientation="portrait" />
@@ -49,40 +59,31 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:screenOrientation="portrait" />
         <meta-data
             android:name="com.huawei.hms.client.channel.androidMarket"
             android:value="false" />
-
         <meta-data
             android:name="push_kit_auto_init_enabled"
             android:value="true" />
-
         <service
             android:name=".services.push_notification.PushMsgService"
+            android:enabled="true"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.huawei.push.action.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-        <receiver android:name=".services.network_broadcast.NetworkChangeReceiver" >
+        <!--<receiver
+            android:name=".services.network_broadcast.NetworkChangeReceiver"
+            android:label="NetworkChangeReceiver" >
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"
-                    tools:ignore="BatteryLife" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
-        </receiver>
-
-        <activity
-            android:name=".services.push_notification.DeeplinkActivity">
-            <!--<intent-filter>
+        </receiver>-->
+        <activity android:name=".services.push_notification.DeeplinkActivity">
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -90,9 +91,9 @@
                     android:host="com.huawei.codelabpush"
                     android:path="/deeplink"
                     android:scheme="pushscheme" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
-
     </application>
 
 </manifest>
