--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,57 @@ dependencies {
     implementation 'com.huawei.hms:image-render:1.0.3.303'
     implementation 'com.huawei.hms:push:5.1.1.301'
     implementation 'com.huawei.hms:hwid:5.3.0.305'
+    implementation 'com.huawei.hms:ml-nlp-textembedding:2.0.4.300'
+    implementation 'com.huawei.hms:ml-computer-vision-object:2.0.3.301'
+    implementation 'com.huawei.hms:ml-computer-vision-object-detection-model:2.0.3.301'
+    implementation 'com.huawei.hms:ml-computer-vision-textimagesuperresolution:2.0.4.300'
+    implementation 'com.huawei.hms:ml-computer-vision-textimagesuperresolution-model:2.0.4.300'
+    implementation 'com.huawei.hms:ml-computer-translate:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-translate-model:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr-latin-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr-jk-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-ocr-cn-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-voice-asr-plugin:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-livenessdetection:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-voice-realtimetranscription:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-segmentation:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-image-segmentation-multiclass-model:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-image-segmentation-body-model:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-image-segmentation-hair-model:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-handkeypoint:2.1.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-handkeypoint-model:2.1.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-gesture-model:2.1.0.300'
+    implementation 'com.huawei.hms:ml-computer-card-gcr-plugin:2.0.1.301'
+    implementation 'com.huawei.hms:ml-computer-model-executor:2.1.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-imagesuperresolution:2.0.4.300'
+    implementation 'com.huawei.hms:ml-computer-vision-imagesuperresolution-model:2.0.4.300'
+    implementation 'com.huawei.hms:ml-computer-vision-formrecognition:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-formrecognition-model:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-language-detection:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-language-detection-model:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-scenedetection:2.0.3.300'
+    implementation 'com.huawei.hms:ml-computer-vision-scenedetection-model:2.0.3.300'
+    implementation 'com.huawei.hms:ml-computer-vision-face:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-face-shape-point-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-face-emotion-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-face-feature-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-face-3d-model:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-vision-documentskew:2.1.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-documentskew-model:2.1.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-cloud:2.0.5.300'
+    implementation 'com.huawei.hms:ml-computer-voice-aft:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-classification:2.0.1.300'
+    implementation 'com.huawei.hms:ml-computer-vision-image-classification-model:2.0.1.300'
+    implementation 'com.huawei.hms:ml-speech-semantics-sounddect-sdk:2.1.0.300'
+    implementation 'com.huawei.hms:ml-speech-semantics-sounddect-model:2.1.0.300'
+    implementation 'com.huawei.hms:ml-computer-card-bcr:2.0.3.301'
+    implementation 'com.huawei.hms:ml-computer-voice-tts-model-bee:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-voice-tts:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-voice-tts-model-eagle:2.2.0.300'
+    implementation 'com.huawei.hms:ml-computer-vision-skeleton:2.0.4.300'
+    implementation 'com.huawei.hms:ml-computer-vision-skeleton-model:2.0.4.300'
+    implementation 'com.huawei.hms:ml-computer-vision-yoga-model:2.0.4.300'
 }
 
 apply plugin: 'com.huawei.agconnect'
